@@ -1,0 +1,62 @@
+<?php
+/**
+ * @version		$Id$
+ * @package		Joomla.Administrator
+ * @subpackage	mod_latest
+ * @copyright	Copyright (C) 2005 - 2009 Open Source Matters, Inc. All rights reserved.
+ * @license		GNU General Public License version 2 or later; see LICENSE.txt
+ */
+
+// no direct access
+defined('_JEXEC') or die;
+?>
+<table class="adminlist">
+	<thead>
+		<tr>
+			<th>
+				<?php echo JText::_('Mod_Latest_Latest_Items'); ?>
+			</th>
+			<th>
+				<strong><?php echo JText::_('Mod_Latest_Created'); ?></strong>
+			</th>
+			<th>
+				<strong><?php echo JText::_('Mod_Latest_Created_By');?>
+				</strong>
+			</th>
+		</tr>
+	</thead>
+<?php if (count($list)) : ?>
+	<tbody>
+	<?php foreach ($list as $item) : ?>
+		<tr>
+			<td>
+				<?php if ($item->checked_out) : ?>
+						<?php echo JHtml::_('jgrid.checkedout', $item->editor, $item->checked_out_time); ?>
+				<?php endif; ?>
+
+				<?php if ($item->link) :?>
+					<a href="<?php echo $item->link; ?>">
+						<?php echo htmlspecialchars($item->title, ENT_QUOTES, 'UTF-8');?></a>
+				<?php else :
+					echo htmlspecialchars($item->title, ENT_QUOTES, 'UTF-8');
+				endif; ?>
+			</td>
+			<td class="center">
+				<?php echo JHtml::_('date', $item->created, '%Y-%m-%d %H:%M:%S'); ?>
+			</td>
+			<td class="center">
+				<?php echo $item->author_name;?>
+			</td>
+		</tr>
+		<?php endforeach; ?>
+	</tbody>
+<?php else : ?>
+	<tbody>
+		<tr>
+			<td colspan="3">
+				<p class="noresults"><?php echo JText::_('Mod_Latest_No_Matching_Results');?></p>
+			</td>
+		</tr>
+	</tbody>
+<?php endif; ?>
+</table>
